updated bottom portion styling.

--- a/index.html
+++ b/index.html
@@ -116,71 +116,73 @@
 
 
             /* Switcher */
-          --global-bg-gray-200: rgb(29 78 216);
-          --global-text-black: #fff;
+            --global-bg-gray-200: rgb(29 78 216);
+            --global-text-black: #fff;
 
-          /* Find Care Button */
-          --global-bg-white: #2c915b;
-          --global-text-blue-500: #fff;
-          --global-rounded-3xl: 12px;
-          --global-pxy-63: 12px 24px 12px 24px;
-          --global-text-semibold: 600;
-          --global-border-blue-500: 2px solid #2c915b;
+            /* Find Care Button */
+            --global-bg-white: #2c915b;
+            --global-text-blue-500: #fff;
+            --global-rounded-3xl: 12px;
+            --global-pxy-63: 12px 24px 12px 24px;
+            --global-text-semibold: 600;
+            --global-border-blue-500: 2px solid #2c915b;
 
-          /* Log-In Button */
-          --global-bg-blue-500: rgb(59 130 246);
-          --global-text-white: #333;
-          --global-text-login-btn: #fff;
-          --global-border-login-btn: #2c915b;
+            /* Log-In Button */
+            --global-bg-blue-500: rgb(59 130 246);
+            --global-text-white: #333;
+            --global-text-login-btn: #fff;
+            --global-border-login-btn: #2c915b;
 
-          /* Masthead BG */
-          --global-hero-img: url('images/masthead-bg.jpeg');
-          --global-hero-pos: 0 50%;
-          --global-hero-height: 510px;
+            /* Masthead BG */
+            --global-hero-img: url('images/masthead-bg.jpeg');
+            --global-hero-pos: 0 50%;
+            --global-hero-height: 510px;
 
-          /* Masthead H1 */
-          --global-text-size-5xl: 36px;
-          --global-h1-leading: 36px;
+            /* Masthead H1 */
+            --global-text-size-5xl: 36px;
+            --global-h1-leading: 36px;
 
-          /* Masthead P */
-          --global-text-lg: 16px;
+            /* Masthead P */
+            --global-text-lg: 16px;
 
-          /* Get Started BTN */
-          --global-bg-green-500:#f4ba01;
+            /* Get Started BTN */
+            --global-bg-green-500: #f4ba01;
 
-          /* PH BTN */
-          --global-bg-phbtn: rgb(40, 108, 226);
+            /* PH BTN */
+            --global-bg-phbtn: rgb(40, 108, 226);
 
-          /* Feats */
-          --global-ico-feat1: Url('images/feat1.svg');
-          --global-ico-feat2: Url('images/feat2.svg');
-          --global-ico-feat3: Url('images/feat3.svg');
-          --global-ico-width: 128px;
-          --global-ico-height: 128px;
-          --global-ico-size: contain;
-          --global-ico-rep: no-repeat;
-          --global-ico-pos: center;
-          --global-ico-feat-fltr: brightness(1) invert(0);
+            /* Feats */
+            --global-ico-feat1: Url('images/feat1.svg');
+            --global-ico-feat2: Url('images/feat2.svg');
+            --global-ico-feat3: Url('images/feat3.svg');
+            --global-ico-width: 128px;
+            --global-ico-height: 128px;
+            --global-ico-size: contain;
+            --global-ico-rep: no-repeat;
+            --global-ico-pos: center;
+            --global-ico-feat-fltr: brightness(1) invert(0);
 
-          --global-pad-96: 26px 96px;
-          --global-feat-bg: white;
-          --global-feat-clr: #333;
+            --global-pad-96: 26px 96px;
+            --global-feat-bg: white;
+            --global-feat-clr: #333;
 
-          /* Callout */
-          --global-bg-blue-200: rgb(191 219 254);
-          --global-text-blue-800: rgb(30 64 175);
-          --global-text-size-3xl: 36px;
-          --global-text-size-xl: 28px;
-          --global-text-size-2xl: 32px;
-          --global-mt-20: 80px;
-          --global-pt-20: 80px;
-          --global-pb-20: 80px;
+            /* Callout */
+            --global-bg-blue-200: white;
+            --global-text-blue-800: #333;
+            --global-text-size-3xl: 36px;
+            --global-text-size-xl: 28px;
+            --global-text-size-2xl: 32px;
+            --global-mt-20: 80px;
+            --global-pt-20: 80px;
+            --global-pb-20: 80px;
+            --global-clear: inline;
+            --global-co-bdr: 15px solid #FAFAFA;
         }
 
 
-        .for-nav{
-          background-color: var(--global-bg-gray-200);
-          color: var(--global-text-black)
+        .for-nav {
+            background-color: var(--global-bg-gray-200);
+            color: var(--global-text-black)
         }
 
         .fcareBtn {
@@ -251,32 +253,32 @@
         .feat-1 .feat-icon {
             background-image: var(--global-ico-feat1);
         }
+
         .feat-2 .feat-icon {
             background-image: var(--global-ico-feat2);
         }
+
         .feat-3 .feat-icon {
             background-image: var(--global-ico-feat3);
         }
 
         .mdco {
-            border-top: 15px solid #F9FAFB;
-            background-color: white;
-            margin-top: var(--global-none);
+            background-color: var(--global-bg-blue-200);
+            border-top: var(--global-co-bdr);
         }
 
         .mdco h2 {
-            color: #333;
-            font-size: 32px;
+            color: var(--global-text-blue-800);
+            font-size: var(--global-text-size-2xl);
         }
 
-        .mdco  p {
+        .mdco p {
             font-size: var(--global-txt-lg);
 
         }
 
         .mdco h3 {
-            font-weight: normal;
-            font-size: 24px;
+            font-size: var(--global-text-size-xl);
         }
 
     </style>
