update css to reflect wanted changes

--- a/index.html
+++ b/index.html
@@ -106,179 +106,181 @@
         .text-balance {
             text-wrap: balance;
         }
-
         :root {
-            --global-none: 0;
-            --global-txt-sm: 14px;
-            --global-txt-base: 14px;
-            --global-txt-lg: 14px;
-            --global-txt-xl: 18px;
+          --global-none: 12px solid #F9FAFB;
+          --global-txt-sm: 14px;
+          --global-txt-base: 14px;
+          --global-txt-lg: 14px;
+          --global-txt-xl: 18px;
+          --global-mh-txt: #333;
+          --global-lib-brdr: #3b82f6;
+          --global-ph-bg: #3b82f6;
 
+          /* Switcher */
+          --global-bg-gray-200: rgb(29 78 216);
+          --global-text-black: #fff;
 
-            /* Switcher */
-            --global-bg-gray-200: rgb(29 78 216);
-            --global-text-black: #fff;
+          /* Find Care Button */
+          --global-bg-white: #2c915b;
+          --global-text-blue-500: #fff;
+          --global-rounded-3xl: 12px;
+          --global-pxy-63: 12px 24px 12px 24px;
+          --global-text-semibold: 600;
+          --global-border-blue-500: 2px solid #2c915b;
 
-            /* Find Care Button */
-            --global-bg-white: #2c915b;
-            --global-text-blue-500: #fff;
-            --global-rounded-3xl: 12px;
-            --global-pxy-63: 12px 24px 12px 24px;
-            --global-text-semibold: 600;
-            --global-border-blue-500: 2px solid #2c915b;
+          /* Log-In Button */
+          --global-bg-blue-500: rgb(59 130 246);
+          --global-text-white: #fff;
+          --global-text-login-btn: #fff;
+          --global-border-login-btn: rgb(59 130 246);
 
-            /* Log-In Button */
-            --global-bg-blue-500: rgb(59 130 246);
-            --global-text-white: #333;
-            --global-text-login-btn: #fff;
-            --global-border-login-btn: #2c915b;
+          /* Masthead BG */
+          --global-hero-img: url('images/masthead-bg.jpeg');
+          --global-hero-pos: 0 50%;
+          --global-hero-height: 510px;
 
-            /* Masthead BG */
-            --global-hero-img: url('images/masthead-bg.jpeg');
-            --global-hero-pos: 0 50%;
-            --global-hero-height: 510px;
+          /* Masthead H1 */
+          --global-text-size-5xl: 36px;
+          --global-h1-leading: 36px;
 
-            /* Masthead H1 */
-            --global-text-size-5xl: 36px;
-            --global-h1-leading: 36px;
+          /* Masthead P */
+          --global-text-lg: 16px;
 
-            /* Masthead P */
-            --global-text-lg: 16px;
+          /* Get Started BTN */
+          --global-bg-green-500:#f4ba01;
 
-            /* Get Started BTN */
-            --global-bg-green-500: #f4ba01;
+          /* PH BTN */
+          --global-bg-phbtn: rgb(40, 108, 226);
 
-            /* PH BTN */
-            --global-bg-phbtn: rgb(40, 108, 226);
+          /* Feats */
+          --global-ico-feat1: Url('images/feat1.svg');
+          --global-ico-feat2: Url('images/feat2.svg');
+          --global-ico-feat3: Url('images/feat3.svg');
+          --global-ico-width: 128px;
+          --global-ico-height: 128px;
+          --global-ico-size: contain;
+          --global-ico-rep: no-repeat;
+          --global-ico-pos: center;
+          --global-ico-feat-fltr: brightness(1) invert(0);
 
-            /* Feats */
-            --global-ico-feat1: Url('images/feat1.svg');
-            --global-ico-feat2: Url('images/feat2.svg');
-            --global-ico-feat3: Url('images/feat3.svg');
-            --global-ico-width: 128px;
-            --global-ico-height: 128px;
-            --global-ico-size: contain;
-            --global-ico-rep: no-repeat;
-            --global-ico-pos: center;
-            --global-ico-feat-fltr: brightness(1) invert(0);
+          --global-pad-96: 26px 96px;
+          --global-feat-bg: white;
+          --global-feat-clr: #333;
 
-            --global-pad-96: 26px 96px;
-            --global-feat-bg: white;
-            --global-feat-clr: #333;
-
-            /* Callout */
-            --global-bg-blue-200: white;
-            --global-text-blue-800: #333;
-            --global-text-size-3xl: 36px;
-            --global-text-size-xl: 28px;
-            --global-text-size-2xl: 32px;
-            --global-mt-20: 80px;
-            --global-pt-20: 80px;
-            --global-pb-20: 80px;
-            --global-clear: inline;
-            --global-co-bdr: 15px solid #FAFAFA;
+          /* Callout */
+          --global-bg-blue-200: #fff;
+          --global-text-blue-800: #333;
+          --global-text-size-3xl: 30px;
+          --global-text-size-xl: 20px;
+          --global-text-size-2xl: 30px;
+          --global-mt-20: 90px;
+          --global-pt-20: 90px;
+          --global-pb-20: 90px;
         }
+
+
 
 
         .for-nav {
-            background-color: var(--global-bg-gray-200);
-            color: var(--global-text-black)
+          background-color: var(--global-bg-gray-200);
+          color: var(--global-text-black)
         }
 
         .fcareBtn {
-            color: var(--global-text-blue-500);
-            background-color: var(--global-bg-white);
-            font-weight: var(--global-text-semibold);
-            border-radius: var(--global-rounded-3xl);
-            padding: var(--global-pxy-63);
-            border: var(--global-border-blue-500);
+          color: var(--global-text-blue-500);
+          background-color: var(--global-bg-white);
+          font-weight: var(--global-text-semibold);
+          border-radius: var(--global-rounded-3xl);
+          padding: var(--global-pxy-63);
+          border: var(--global-border-blue-500);
         }
 
         .loginBtn {
-            color: var(--global-text-login-btn);
-            background-color: var(--global-bg-blue-500);
-            font-weight: var(--global-text-semibold);
-            border-radius: var(--global-rounded-3xl);
-            padding: var(--global-pxy-63);
-            border: var(--global-border-login-btn);
+          color: var(--global-text-white);
+          background-color: var(--global-bg-blue-500);
+          font-weight: var(--global-text-semibold);
+          border-radius: var(--global-rounded-3xl);
+          padding: var(--global-pxy-63);
+          border: var(--global-lib-brdr);
         }
 
         .mstbg {
-            background-image: var(--global-hero-img);
-            background-position: var(--global-hero-pos);
-            height: var(--global-hero-height);
+          background-image: var(--global-hero-img);
+          background-position: var(--global-hero-pos);
+          height: var(--global-hero-height);
         }
 
         .mstbg h1 {
-            color: var(--global-text-white);
-            font-size: var(--global-text-size-5xl);
-            line-height: var(--global-h1-leading);
+          color: var(--global-mh-txt);
+          font-size: var(--global-text-size-5xl);
+          line-height: var(--global-h1-leading);
         }
 
         .mstbg p {
-            color: var(--global-text-white);
-            font-size: var(--global-text-lg);
+          color: var(--global-mh-txt);
+          font-size: var(--global-text-lg);
         }
 
         .getStBtn {
-            border-radius: var(--global-rounded-3xl);
-            padding: var(--global-pxy-63);
-            background-color: var(--global-bg-green-500);
-            font-weight: var(--global-text-semibold);
+          border-radius: var(--global-rounded-3xl);
+          padding: var(--global-pxy-63);
+          background-color: var(--global-bg-green-500);
+          font-weight: var(--global-text-semibold);
         }
 
         .phNumBtn {
-            border-radius: var(--global-rounded-3xl);
-            padding: var(--global-pxy-63);
-            background-color: var(--global-bg-phbtn);
-            font-weight: var(--global-text-semibold);
-            color: var(--global-text-blue-500);
+          border-radius: var(--global-rounded-3xl);
+          padding: var(--global-pxy-63);
+          background-color: var(--global-ph-bg);
+          font-weight: var(--global-text-semibold);
+          color: var(--global-text-blue-500);
         }
 
         .rets {
-            padding: var(--global-pad-96);
-            background-color: var(--global-feat-bg);
-            color: var(--global-feat-clr);
+          padding: var(--global-pad-96);
+          background-color: var(--global-feat-bg);
+          color: var(--global-feat-clr);
         }
 
         .feat-icon {
-            width: var(--global-ico-width);
-            height: var(--global-ico-height);
-            background-size: var(--global-ico-size);
-            background-repeat: var(--global-ico-rep);
-            background-position: var(--global-ico-pos);
-            filter: var(--global-ico-feat-fltr);
+          width: var(--global-ico-width);
+          height: var(--global-ico-height);
+          background-size: var(--global-ico-size);
+          background-repeat: var(--global-ico-rep);
+          background-position: var(--global-ico-pos);
+          filter: var(--global-ico-feat-fltr);
         }
 
         .feat-1 .feat-icon {
-            background-image: var(--global-ico-feat1);
+          background-image: var(--global-ico-feat1);
         }
 
         .feat-2 .feat-icon {
-            background-image: var(--global-ico-feat2);
+          background-image: var(--global-ico-feat2);
         }
 
         .feat-3 .feat-icon {
-            background-image: var(--global-ico-feat3);
+          background-image: var(--global-ico-feat3);
         }
 
         .mdco {
-            background-color: var(--global-bg-blue-200);
-            border-top: var(--global-co-bdr);
+          background-color: var(--global-bg-blue-200);
+          border-top: var(--global-none);
         }
 
         .mdco h2 {
-            color: var(--global-text-blue-800);
-            font-size: var(--global-text-size-2xl);
+          color: var(--global-text-blue-800);
+          font-size: var(--global-text-size-3xl);
         }
 
         .mdco p {
-            font-size: var(--global-txt-lg);
+          font-size: var(--global-txt-lg);
 
         }
 
         .mdco h3 {
-            font-size: var(--global-text-size-xl);
+          font-weight: var(--global-text-semibold);
+          font-size: var(--global-text-size-xl);
         }
 
     </style>
